etc/kubernetes/deploymentNetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-selector2
spec:
  podSelector:
    matchLabels:
      app: drone2
      tier: drone
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gcs
  - from:
    - podSelector:
        matchExpressions:
        - {key: app, operator: In, values: []}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-selector1
spec:
  podSelector:
    matchLabels:
      app: drone1
      tier: drone
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gcs
  - from:
    - podSelector:
        matchExpressions:
        - {key: app, operator: In, values: []}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-selector3
spec:
  podSelector:
    matchLabels:
      app: drone3
      tier: drone
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gcs
  - from:
    - podSelector:
        matchExpressions:
        - {key: app, operator: In, values: [drone5, drone4]}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-selector4
spec:
  podSelector:
    matchLabels:
      app: drone4
      tier: drone
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gcs
  - from:
    - podSelector:
        matchExpressions:
        - {key: app, operator: In, values: [drone3]}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-selector5
spec:
  podSelector:
    matchLabels:
      app: drone5
      tier: drone
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gcs
  - from:
    - podSelector:
        matchExpressions:
        - {key: app, operator: In, values: [drone3]}
